--- a/index.html
+++ b/index.html
@@ -52,46 +52,6 @@
         </div>
     </header>
 
-    <!-- bubbles
-        <div class="container-bubbles">
-            <div class="bubbles">
-                <span style="--i:11;"></span>
-                <span style="--i:12;"></span>
-                <span style="--i:24;"></span>
-                <span style="--i:10;"></span>
-                <span style="--i:14;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:18;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:19;"></span>
-                <span style="--i:20;"></span>
-                <span style="--i:22;"></span>
-                <span style="--i:25;"></span>
-                <span style="--i:18;"></span>
-                <span style="--i:21;"></span>
-                <span style="--i:15;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:26;"></span>
-                <span style="--i:17;"></span>
-                <span style="--i:22;"></span>
-                <span style="--i:29;"></span>
-                <span style="--i:11;"></span>
-                <span style="--i:14;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:25;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:27;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:20;"></span>
-                <span style="--i:12;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:15;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:25;"></span>
-            </div>
-        </div>
-    -->
     <section id="Presentacion">
     
     <div class="contenedor-principal">
@@ -105,7 +65,7 @@
 
     <div class="info">
     <h3>Programming and Systems Analysis Technician</h3>
-
+        <H2>-Freelancer-</H2>
     <p>Developer and Web Designer Programer</p>
     </div>
         <div class="overlay" id="overlay">
@@ -171,12 +131,13 @@
     <section id="Proyectos">
         <div class="container">
             <div class="neon">Projects</div>
+            <div class="projects">
                 <link data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
                 <a href="https://santamesa.cl/" class="button">SantaMesa</a>
-                <a href="Php/crud.php" class="button">Basic System CRUD</a>
+                <a href="#" class="button">Basic System CRUD <br>not available</a>
                 <a href="calculadora.html" class="button">Calculator</a>
                 <a href="gringo.html" class="button">Gringo System</a>
-
+            </div>
             <h2>More, Coming soon..</h2> 
         </div>
     </section>
