--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
     <section id="Proyectos">
         <div class="container">
             <div class="neon">Projects</div>
+            <div class="projects">
                 <link data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
                 <a href="https://santamesa.cl/" class="button">SantaMesa</a>
-                <a href="#" class="button">Basic System CRUD</a>
+                <a href="#" class="button">Basic System CRUD <br>not available</a>
                 <a href="calculadora.html" class="button">Calculator</a>
                 <a href="gringo.html" class="button">Gringo System</a>
-
+            </div>
             <h2>More, Coming soon..</h2> 
         </div>
     </section>
