--- a/gf.html
+++ b/gf.html
@@ -8,42 +8,51 @@
     <title>My Girlfriend</title>
 
     <link rel="stylesheet" href="Css/gf.css" type="text/css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/0b6d2c7b29.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 
 </head>
 <body>
     <div class="stars"></div>
         <div class="container">
-            <h1>¿Do you wanna be my girl friend?</h1>
+            <h1>¿Do you wanna be my girlfriend?</h1>
             <div class="box">
                 <span class="borderLine"></span>
-
-                <div class="overlay">
-                    <div class="popup">
-                        <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
-                        <h2>¿Are you totally sure you wanna be my Girlfriend?</h2>
-                        <button id="btn-abrir-popup2" class="btn-abrir-popup2">Yes</button>
-                        <button>No</button>
-                    </div>
-                </div>
-
-                <div class="overlay2">
-                    <div class="popup2">
-                        <a href="#" id="btn-cerrar-popup2" class="btn-cerrar-popup2"><i class="fa-solid fa-xmark"></i></a>
-                        <h2>¿Are you totally sure you wanna be my Girlfriend?</h2>
-                        <a class="button" href="#">Yes</a>
-                        <button>No</button>
-                    </div>
-                </div>
-
+                <div class="inside-box">
                 <h2>Choose your desicion</h2>
                 <div class="buttons-container">
-                <button id="btn-abrir-popup" class="btn-abrir-popup">Yes</button>
-                <button>No</button>
+                <button id="btn-abrir-popup1" class="btn-abrir-popup1">Yes</button>
+                <button id="button-no">No</button>
+                </div>
                 </div>
             </div>
+
+            <div class="overlay" id="overlay1">
+                <div class="popup" id="popup1">
+                    <a href="#" id="btn-cerrar-popup1" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
+                    <h2>¿Are you totally sure you wanna be my Girlfriend?</h2>
+                    <button id="btn-abrir-popup2" class="btn-abrir-popup">Yes</button>
+                    <button id="button-no1">No</button>
+                </div>
+            </div>
+
+            <div class="overlay" id="overlay2">
+                <div class="popup" id="popup2">
+                    <a href="#" id="btn-cerrar-popup2" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
+                    <h2>¿Are you positve? there is no way back..</h2>
+                    <a class="button" href="love.html">Yes</a>
+                    <button id="button-no2">No</button>
+                </div>
+            </div>
+             
         </div>
 </body>
+
+<script src="./Js/gf.js"></script>
+
 </html>
