--- a/love.html
+++ b/love.html
@@ -17,8 +17,8 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
-    <!--<audio src="./Others/lets_fall_in_love.mp3" autoplay="autoplay" loop="loop"></audio>-->
     <section id="Love">
+        <audio src="./Others/lets_fall_in_love.mp3" autoplay="autoplay" loop="loop"></audio>
         <div class="container">
             <div class="text-container">
                 <h1>Thanks for being my Girlfriend My Love</h1>
