--- a/gf.html
+++ b/gf.html
@@ -24,7 +24,7 @@
             <div class="box">
                 <span class="borderLine"></span>
                 <div class="inside-box">
-                <h2>Choose your desicion</h2>
+                <h2>Choose your decision</h2>
                 <div class="buttons-container">
                 <button id="btn-abrir-popup1" class="btn-abrir-popup1">Yes</button>
                 <button id="button-no">No</button>
@@ -44,7 +44,7 @@
             <div class="overlay" id="overlay2">
                 <div class="popup" id="popup2">
                     <a href="#" id="btn-cerrar-popup2" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
-                    <h2>¿Are you positve? there is no way back..</h2>
+                    <h2>¿Are you positive? there is no way back..</h2>
                     <a class="button" href="love.html">Yes</a>
                     <button id="button-no2">No</button>
                 </div>
