--- a/gf.html
+++ b/gf.html
@@ -24,9 +24,9 @@
             <div class="box">
                 <span class="borderLine"></span>
                 <div class="inside-box">
-                <h2>Choose your decision</h2>
+                <h2 class="choose">Choose your decision</h2>
                 <div class="buttons-container">
-                <button id="btn-abrir-popup1" class="btn-abrir-popup1">Yes</button>
+                <button id="btn-abrir-popup1" class="btn-abrir-popup">Yes</button>
                 <button id="button-no">No</button>
                 </div>
                 </div>
