--- a/love.html
+++ b/love.html
@@ -23,10 +23,13 @@
             <div class="text-container">
                 <h1>Thanks for being my Girlfriend My Love</h1>
                 <h2>I love you so much ♥</h2>
-                <p>Now is official :3</p>
+                <p>Now is 100% official :3</p>
             </div>
         </div>
     </section>
 
 </body>
+
+<script src="./Js/love.js"></script>
+
 </html>
