--- a/love.html
+++ b/love.html
@@ -23,7 +23,7 @@
             <div class="text-container">
                 <h1>Thanks for being my Girlfriend My Love</h1>
                 <h2>I love you so much ♥</h2>
-                <p>Now is 100% official :3</p>
+                <p>I told you i was going to ask you again in person 😉</p>
             </div>
         </div>
     </section>
