--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
     
     <div class="contenedor-principal">
     <div class="contenedor-imagen">
-    <img src="Img/I0zJEJTy.jpeg" class="border" alt="yo">
+    <img src="Img/PERFIL.jpg" class="border" alt="yo">
     </div>
     </div>
 
     <div class="container">
     <h1 class="name">Luis Huber</h1>
-
     <div class="info">
     <h3>Programming and Systems Analysis Technician</h3>
         <H2>-Freelancer-</H2>
@@ -133,10 +132,10 @@
             <div class="neon">Projects</div>
             <div class="projects">
                 <link data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
-                <a href="https://santamesa.cl/" class="button">SantaMesa</a>
-                <a href="#" class="button">Basic System CRUD <br>not available</a>
+                <a href="https://santamesa.cl/" class="button">SantaMesa <br> -not available right now-</a>
+                <a href="#" class="button">Basic System CRUD <br>With login and register <br>-not available (php)-</a>
                 <a href="calculadora.html" class="button">Calculator</a>
-                <a href="gringo.html" class="button">Gringo System</a>
+                <a href="gringo.html" class="button">Gringo System <br>-Under construction-</a>
             </div>
             <h2>More, Coming soon..</h2> 
         </div>
