--- a/gringo.html
+++ b/gringo.html
@@ -36,6 +36,27 @@
             </form>
         </div>
     </div>
+<br><br><br>
+    <div class="container">
+    <h2>Inches to Cm</h2>
+    <div class="box">
+        <span class="borderLine"></span>
+        <form action="">
+            <br>
+            <div class="dolar">
+                <h3>Inches</h3>
+                <input type="number" id="inch">
+            </div>
+            <br>
+            <div class="peso">
+                <h3>Centimeters</h3>
+                <input type="number" id="cm">
+            </div>
+        </form>
+    </div>
+</div>
+</div>
+
 
 
     <script src="Js/gringo.js"></script>
