--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
     <div class="info">
     <h3>Programming and Systems Analysis Technician</h3>
         <H2>-Freelancer-</H2>
-    <p>Developer and Web Designer Programer</p>
+    <p>Developer and Web Designer Programmer</p>
     </div>
         <div class="overlay" id="overlay">
             <div class="popup" id="popup">
                 <a href="#Presentacion" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
                 <h2>About me</h2>
-                <p>As you've recently read, my name is Luis Huber, I'm 21 years old and I'm Chilean programmer, so english it's not
-                    my first language, but i try to practice and improve with the time and not only with english, with the informatic and
-                    with the life in general, i try to be the best version of myself, I like to do sports too, that's weird from a programmer no? 
+                <p>As you've recently read, my name is Luis Huber, I'm 22 years old and I'm Chilean programmer, so english it's not
+                    my first language, but I try to practice and improve it with the time, and not only with english, with the my progamming skills and
+                    with the life in general, I try to be the best version of myself, I like to do sports too, that's weird from a programmer no? 
                     but if you want to have a healthy mind, you need to have a healthy body.
                 </p>
                 <p>
-                    Right now i don't have too much experience, but i know with respect and time im going to be capable to do big things and if you
+                    Right now I don't have too much experience, but i know with respect and time I'm going to be capable to do big things and if you
                     wanna help me with that, you are free to contact me. Thanks for reading this ^^
                 </p>
             </div>
@@ -132,8 +132,8 @@
             <div class="neon">Projects</div>
             <div class="projects">
                 <link data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
-                <a href="https://santamesa.cl/" class="button">SantaMesa <br> -not available right now-</a>
-                <a href="https://github.com/LH-Programer/Basic-System-CRUD" class="button">Basic System CRUD <br>With login and register <br>-not available (here)-</a>
+                <a href="https://santamesa.cl/" class="button">SantaMesa LandingPage <br>-(hosting down)-</a>
+                <a href="#" class="button">Basic System CRUD <br>With login and register <br>-link of Github (php)-</a>
                 <a href="calculadora.html" class="button">Calculator</a>
                 <a href="gringo.html" class="button">Gringo System <br>-Under construction-</a>
             </div>
