--- a/index.html
+++ b/index.html
@@ -52,6 +52,46 @@
         </div>
     </header>
 
+    <!-- bubbles
+        <div class="container-bubbles">
+            <div class="bubbles">
+                <span style="--i:11;"></span>
+                <span style="--i:12;"></span>
+                <span style="--i:24;"></span>
+                <span style="--i:10;"></span>
+                <span style="--i:14;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:19;"></span>
+                <span style="--i:20;"></span>
+                <span style="--i:22;"></span>
+                <span style="--i:25;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:21;"></span>
+                <span style="--i:15;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:26;"></span>
+                <span style="--i:17;"></span>
+                <span style="--i:22;"></span>
+                <span style="--i:29;"></span>
+                <span style="--i:11;"></span>
+                <span style="--i:14;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:25;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:27;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:20;"></span>
+                <span style="--i:12;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:15;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:25;"></span>
+            </div>
+        </div>
+    -->
     <section id="Presentacion">
     
     <div class="contenedor-principal">
@@ -62,10 +102,11 @@
 
     <div class="container">
     <h1 class="name">Luis Huber</h1>
+
     <div class="info">
     <h3>Programming and Systems Analysis Technician</h3>
-        <H2>-Freelancer-</H2>
-    <p>Developer and Web Designer Programmer</p>
+
+    <p>Developer and Web Designer Programer</p>
     </div>
         <div class="overlay" id="overlay">
             <div class="popup" id="popup">
@@ -77,7 +118,7 @@
                     but if you want to have a healthy mind, you need to have a healthy body.
                 </p>
                 <p>
-                    Right now I don't have too much experience, but i know with respect and time I'm going to be capable to do big things and if you
+                    Right now i don't have too much experience, but i know with respect and time im going to be capable to do big things and if you
                     wanna help me with that, you are free to contact me. Thanks for reading this ^^
                 </p>
             </div>
@@ -130,17 +171,34 @@
     <section id="Proyectos">
         <div class="container">
             <div class="neon">Projects</div>
-            <div class="projects">
-                <link data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
-                <a href="https://santamesa.cl/" class="button">SantaMesa LandingPage <br>-(hosting down)-</a>
-                <a href="https://github.com/LH-Programer/Basic-System-CRUD" class="button">Basic System CRUD <br>With login and register <br>-link of Github (php)-</a>
-                <a href="calculadora.html" class="button">Calculator</a>
-                <a href="gringo.html" class="button">Gringo System <br>-Under construction-</a>
-            </div>
+                <div class="imagenes">
+                    <div class="img">
+                        <h3>SantaMesa LandingPage</h3>
+                        <p>(hosting down for the moment)</p>
+                        <a href="https://santamesa.cl/" class="button">View</a>
+                    </div>
+                    <div class="img">
+                        <h3>Basic System CRUD</h3>
+                        <p>With login and register</p>
+                        <p>link of Github (php)</p>
+                        <a href="https://github.com/LH-Programer/Basic-System-CRUD" class="button">View</a>
+                    </div>
+                    <div class="img">
+                        <h3>Calculator</h3>
+                        <a href="calculadora.html" class="button">View</a>
+                    </div>
+                    <div class="img">
+                        <h3>Gringo System</h3>
+                        <p>Under construction</p>
+                        <a href="gringo.html" class="button">View</a>
+                    </div>
+                </div>
+
             <h2>More, Coming soon..</h2> 
         </div>
     </section>
-
+    <br>
+    <br>
     <section id="Contacto">
         <div class="container">
         <a href="mailto:ls.huber11@gmail.com"><i class="fa-regular fa-envelope fa-beat" style="color: #ffffff;"></i> E-Mail </a>
@@ -151,7 +209,7 @@
 
     <footer>
         <div class="container">
-        <a href="#">Home</a>
+        <a href="#">Up <i class="fa-solid fa-house"></i></a>
         </div>
     </footer>
 
