--- a/control_store.html
+++ b/control_store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable= no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Control Store</title>
 
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="Css/control_store.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
@@ -109,7 +109,7 @@
         </div>
     </footer>    
 
-    <script src="./JavaScript/index.js"></script>
+    <script src="./Js/control_store.js"></script>
 
 </body>
 
