--- a/login_control_store.html
+++ b/login_control_store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable= no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="CSS/login.css">
+    <link rel="stylesheet" href="Css/login_control_store.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <script src="JavaScript/login.js"></script>
+    <script src="Js/login_control_store.js"></script>
 
 </body>
 
