Actualizacion new projects and frameworks

--- a/index.html
+++ b/index.html
@@ -52,46 +52,6 @@
         </div>
     </header>
 
-    <!-- bubbles
-        <div class="container-bubbles">
-            <div class="bubbles">
-                <span style="--i:11;"></span>
-                <span style="--i:12;"></span>
-                <span style="--i:24;"></span>
-                <span style="--i:10;"></span>
-                <span style="--i:14;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:18;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:19;"></span>
-                <span style="--i:20;"></span>
-                <span style="--i:22;"></span>
-                <span style="--i:25;"></span>
-                <span style="--i:18;"></span>
-                <span style="--i:21;"></span>
-                <span style="--i:15;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:26;"></span>
-                <span style="--i:17;"></span>
-                <span style="--i:22;"></span>
-                <span style="--i:29;"></span>
-                <span style="--i:11;"></span>
-                <span style="--i:14;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:25;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:27;"></span>
-                <span style="--i:23;"></span>
-                <span style="--i:20;"></span>
-                <span style="--i:12;"></span>
-                <span style="--i:16;"></span>
-                <span style="--i:15;"></span>
-                <span style="--i:13;"></span>
-                <span style="--i:25;"></span>
-            </div>
-        </div>
-    -->
     <section id="Presentacion">
     
     <div class="contenedor-principal">
@@ -112,9 +72,9 @@
             <div class="popup" id="popup">
                 <a href="#Presentacion" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fa-solid fa-xmark"></i></a>
                 <h2>About me</h2>
-                <p>As you've recently read, my name is Luis Huber, I'm 22 years old and I'm Chilean programmer, so english it's not
+                <p>As you've recently read, my name is Luis Huber, I'm 23 years old and I'm Chilean programmer, so english it's not
                     my first language, but I try to practice and improve it with the time, and not only with english, with the my progamming skills and
-                    with the life in general, I try to be the best version of myself, I like to do sports too, that's weird from a programmer no? 
+                    with the life in general, I try to be the best version of myself, I also like to do sports too, that's weird from a programmer no? 
                     but if you want to have a healthy mind, you need to have a healthy body.
                 </p>
                 <p>
@@ -148,6 +108,9 @@
            <section id="framework">
             <div class="flex-item2 flex10"></div>
             <div class="flex-item2 flex20"></div>
+            <div class="flex-item2 flex30"></div>
+            <div class="flex-item2 flex40"></div>
+            <div class="flex-item2 flex50"></div>
            </section>
 
             <h3 class="title">Databases</h3>
@@ -189,8 +152,18 @@
                     </div>
                     <div class="img">
                         <h3>Gringo System</h3>
-                        <p>Under construction</p>
+                        <p>(Under construction)</p>
                         <a href="gringo.html" class="button">View</a>
+                    </div>
+                    <div class="img">
+                        <h3>Gato (Tic Tac Toe)</h3>
+                        <p>(Made it in React)</p>
+                        <a href="/Gato/index.html" class="button">View</a>
+                    </div>
+                    <div class="img">
+                        <h3>Escuela Boxeo JBO</h3>
+                        <p>(Made it in React and Tailwind <br> + Plataform Made it in PHP)</p>
+                        <a href="https://boxeojbo.cl/" class="button">View</a>
                     </div>
                 </div>
 
