--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="img">
                         <h3>Gato (Tic Tac Toe)</h3>
                         <p>(Made it in React)</p>
-                        <a href="/Gato/index.html" class="button">View</a>
+                        <a href="Portafolio/Gato/index.html" class="button">View</a>
                     </div>
                     <div class="img">
                         <h3>Escuela Boxeo JBO</h3>
