actualizacion texto y iconos

--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
                 <h2>About me</h2>
                 <p>As you've recently read, my name is Luis Huber, I'm 23 years old and I'm Chilean programmer, so english it's not
                     my first language, but I try to practice and improve it with the time, and not only with english, with the my progamming skills and
-                    with the life in general, I try to be the best version of myself, I also like to do sports too, that's weird from a programmer no? 
+                    with the life in general, I try to be the best version of myself, I also like to do sports haha, that's weird from a programmer no? 
                     but if you want to have a healthy mind, you need to have a healthy body.
                 </p>
+                <p>I'm really into Web Developing, so every single day I try to learn something new in the area, that make me made
+                    some projects, and some of them are in this page, and others are in my GitHub account, If you want to see them, you can click
+                    right bellow in my proyects section.
+                </p>
                 <p>
-                    Right now i don't have too much experience, but i know with respect and time im going to be capable to do big things and if you
-                    wanna help me with that, you are free to contact me. Thanks for reading this ^^
+                    Right now I don't have too much experience, but I know with the time I'm going to be capable to do big things and show what It's my value.
+                    if you wanna help me with that, you are free to contact me. Thanks for reading this ^^
                 </p>
             </div>
         </div>
@@ -92,7 +96,7 @@
     <section id="Tecnologias">
 
         <div class="container">
-            <h3 class="title">Languages I use</h3>
+            <h3 class="title">Languages that I use</h3>
            <section id="programming">
                 <div class="flex-item flex1"></div>
                 <div class="flex-item flex2"></div>
@@ -176,7 +180,7 @@
         <div class="container">
         <a href="mailto:ls.huber11@gmail.com"><i class="fa-regular fa-envelope fa-beat" style="color: #ffffff;"></i> E-Mail </a>
         <a href="https://github.com/LH-Programer" target="_blank"><i class="fa-brands fa-github fa-bounce" style="color: #ffffff;"></i> Github</a>
-        <a href="https://www.linkedin.com/in/luis-huber-6a9a87257/" target="_blank"> <i class="fa-brands fa-linkedin fa-shake" style="color: #ffffff;"></i> Linkedin</a>
+        <a href="https://www.linkedin.com/in/luis-huber-zamora-6a9a87257/" target="_blank"> <i class="fa-brands fa-linkedin fa-shake" style="color: #ffffff;"></i> Linkedin</a>
         </div>
     </section>
 
